--- a/index.html
+++ b/index.html
@@ -2525,11 +2525,11 @@
         .BURKINAFASO{
             display: grid;
             grid-template-rows: 0.5fr 1fr;
-            column-gap: 2rem;
+            column-gap: 3rem;
             justify-content: center;
             justify-items: center;
             width: 84%;
-            height: 655px;
+            height: 730px;
             padding: 10px;
             background: #f0f0f0;
             font-family: 'Merienda';
@@ -2538,14 +2538,30 @@
             border: 0.16rem solid #d6d6d6da;
 
         }
+.Bmap{
+    display: grid;
+    grid-template-columns: 0.2fr 0.88fr;
+    column-gap: 0.75rem;
+    justify-content: space-between;
+    justify-items: center;
+    width: 100%;
+    height: 180px;
+    padding: 10px;
+}
+
+.Burkimap img{
+    height: 175px;
+    border-radius: 0.5rem;
+    box-shadow: 0 -0.5px 0.3rem 1px rgb(21, 48, 148);
+}
         .FASOTITLE{
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            width: 1090px;
-            height: 125px;
-            padding: 5px;
+            width: 800px;
+            height: 175px;
+            padding: 15px;
             background: #f9f9f9;
             border-radius: 0.35rem;
             box-shadow: -0.2px 2px 0.35rem 2px rgb(21, 48, 148);
@@ -3758,7 +3774,8 @@ function showSlides(n) {
                             </b>
                             </p>
 
-                            <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
+                            <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">
+                            <b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
                             people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
                             are steadily working to get it done including to be trully inclusive.
                             <br>
@@ -3802,7 +3819,7 @@ function showSlides(n) {
                             <img src="https://zupimages.net/up/22/21/3bad.jpg" alt="Teaching kids" />
                             <figcation
                                 style="font-family: 'Merienda'; font-size: 12.95px; text-align: center; color: rgb(0, 149, 255)">
-                                Supporting Preschool Kids in Burkina Faso</figcation>
+                                Supporting Kids in Burkina Faso</figcation>
                         </figure>
                     </div>
                 </a>
@@ -4021,12 +4038,20 @@ function showSlides(n) {
             <div class="BURKINAFASO">
 
             <a href="https://www.gouvernement.gov.bf/accueil" target="_blank">
-                <div class="FASOTITLE">
-                Burkina Faso, the land of integrity and a landlocked country of 45 provinces is nested in the heart of West Africa. Burkina Faso is independent in 1960 from France. Its capital and
+
+                <div class="Bmap">
+
+                    <div class="Burkimap"> 
+                    <img src="https://zupimages.net/up/22/32/t861.png" alt="Burkina Map">
+                </div>
+
+                <div class="FASOTITLE">Burkina Faso, the land of integrity and a landlocked country of 45 provinces is nested in the heart of West Africa. Burkina Faso is independent in 1960 from France. Its capital and
                 main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
                 sector is growing and believed to create jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé.              
             </div>
+
+        </div>
         </a>
 
  <div class="BUFASO">
@@ -4231,7 +4256,7 @@ function showSlides(n) {
                                 </figure>
                             </div>
                             <div class="content4y">
-                                <img src="https://zupimages.net/up/22/32/t861.png" alt="Burkina Faso Map">
+                                <img src="https://as1.ftcdn.net/v2/jpg/02/69/68/92/1000_F_269689298_VOTXhRxDIi4WdiyWoMLKpzeDGWbMZNtu.jpg" alt="Burkina Faso Map">
                             </div>
                         </div>
 
