--- a/index.html
+++ b/index.html
@@ -2554,6 +2554,11 @@
     border-radius: 0.5rem;
     box-shadow: 0 -0.5px 0.3rem 1px rgb(21, 48, 148);
 }
+
+.Burkimap img:hover{
+    box-shadow: -0.2px 2px 0.35rem 2px rgb(21, 48, 148);
+    transition: 0.16s linear;
+}
         .FASOTITLE{
             display: grid;
             grid-template-columns: 1fr;
