--- a/index.html
+++ b/index.html
@@ -2550,6 +2550,7 @@
 }
 
 .Burkimap img{
+    padding: 5px;
     height: 175px;
     border-radius: 0.5rem;
     box-shadow: 0 -0.5px 0.3rem 1px rgb(21, 48, 148);
@@ -2569,14 +2570,14 @@
             padding: 15px;
             background: #f9f9f9;
             border-radius: 0.35rem;
-            box-shadow: -0.2px 2px 0.35rem 2px rgb(21, 48, 148);
+            box-shadow: 0 -0.5px 0.3rem 1px rgb(21, 48, 148);
             color:#000;
         }
 
         .FASOTITLE:hover{
             color:rgb(172, 35, 62);
             transition: 0.16s linear;
-            box-shadow: -0.25px 3.33px 0.64rem 3px rgba(20, 46, 140, 0.889);
+            box-shadow: -0.2px 2px 0.35rem 2px rgb(21, 48, 148);
             background: #f6f6f6;
         }
 
