--- a/index.html
+++ b/index.html
@@ -1310,7 +1310,8 @@
             background-color: #fdfdfde5;
             padding-top: 20px;
             padding-bottom: 20px;
-            margin-top: 5%;
+            margin-top: 6%;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .Home-Photo {
@@ -1575,15 +1576,21 @@
             padding-left: 5px;
             padding-bottom: 5px;
             padding-right: 5px;
-            padding-top: 20px;
+            padding-top: 5px;
             border-top: 0.2px solid #9d9d9d7c;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content1 a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
-            transition: 0.25s linear;
-            background-color: #f3f3f3fc;
+            transition: 0.2s linear;
+            background-color: #f3f3f3;
+            padding:3px;
+            border-right: 0.12rem solid #858585;
+            border-top: 0.2px solid #9d9d9d7c;
+            border-left: 0.2px solid #9d9d9d7c;
+            border-bottom: 0.2px solid #9d9d9d7c;
+            border-radius: 0.5rem;
         }
 
         .k-image1 {
@@ -1643,12 +1650,18 @@
             padding-right: 5px;
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content2 a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
-            transition: 0.25s linear;
-            background-color: #f3f3f3ec;
+            transition: 0.2s linear;
+            background-color: #f3f3f3;
+            padding:3px;
+            border-right: 0.12rem solid #858585;
+            border-top: 0.2px solid #9d9d9d7c;
+            border-left: 0.2px solid #9d9d9d7c;
+            border-bottom: 0.2px solid #9d9d9d7c;
+            border-radius: 0.5rem;
         }
 
         .k-image3 {
@@ -1707,14 +1720,20 @@
             padding-left: 5px;
             padding-bottom: 5px;
             padding-right: 5px;
-            padding-top: 20px;
+            padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content3 a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
-            transition: 0.25s linear;
-            background-color: #f3f3f3fc;
+            transition: 0.2s linear;
+            background-color: #f3f3f3;
+            padding:3px;
+            border-right: 0.12rem solid #858585;
+            border-top: 0.2px solid #9d9d9d7c;
+            border-left: 0.2px solid #9d9d9d7c;
+            border-bottom: 0.2px solid #9d9d9d7c;
+            border-radius: 0.5rem;
         }
 
         .k-imagek3 {
@@ -1771,14 +1790,20 @@
             padding-left: 5px;
             padding-bottom: 5px;
             padding-right: 5px;
-            padding-top: 20px;
+            padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content4 a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
-            transition: 0.25s linear;
-            background-color: #f3f3f3fc;
+            transition: 0.2s linear;
+            background-color: #f3f3f3;
+            padding:3px;
+            border-right: 0.12rem solid #858585;
+            border-top: 0.2px solid #9d9d9d7c;
+            border-left: 0.2px solid #9d9d9d7c;
+            border-bottom: 0.2px solid #9d9d9d7c;
+            border-radius: 0.5rem;
         }
 
         .k-imagek4 {
@@ -1835,14 +1860,20 @@
             padding-left: 5px;
             padding-bottom: 5px;
             padding-right: 5px;
-            padding-top: 20px;
+            padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content5 a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
-            transition: 0.25s linear;
-            background-color: #f3f3f3fc;
+            transition: 0.2s linear;
+            background-color: #f3f3f3;
+            padding:3px;
+            border-right: 0.12rem solid #858585;
+            border-top: 0.2px solid #9d9d9d7c;
+            border-left: 0.2px solid #9d9d9d7c;
+            border-bottom: 0.2px solid #9d9d9d7c;
+            border-radius: 0.5rem;
         }
 
         .k-imagek5 {
@@ -1901,12 +1932,18 @@
             padding-right: 5px;
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content6 a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
-            transition: 0.25s linear;
-            background-color: #f3f3f3fc;
+            transition: 0.2s linear;
+            background-color: #f3f3f3;
+            padding:3px;
+            border-right: 0.12rem solid #858585;
+            border-top: 0.2px solid #9d9d9d7c;
+            border-left: 0.2px solid #9d9d9d7c;
+            border-bottom: 0.2px solid #9d9d9d7c;
+            border-radius: 0.5rem;
         }
 
         .k-imagek6 {
@@ -1965,12 +2002,18 @@
             padding-right: 5px;
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content7 a:hover {
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
-            transition: 0.25s linear;
-            background-color: #f3f3f3fc;
+            transition: 0.2s linear;
+            background-color: #f3f3f3;
+            padding:3px;
+            border-right: 0.12rem solid #858585;
+            border-top: 0.2px solid #9d9d9d7c;
+            border-left: 0.2px solid #9d9d9d7c;
+            border-bottom: 0.2px solid #9d9d9d7c;
+            border-radius: 0.5rem;
         }
 
         .k-imagek7 {
@@ -2026,6 +2069,7 @@
             word-spacing: 1.7px;
             border-bottom: 0.2px solid #9d9d9d7c;
             padding: 10px;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .contentx a:hover {
@@ -2122,11 +2166,11 @@
             padding-right: 5px;
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
-        .content8:hover{
-            box-shadow: 0px -1px 0.4rem 0.5px rgba(200, 200, 200, 0.675);
-            transition: 0.25s linear;
+        .content8:hover{    
+        transition: 0.25s linear;
         background: #fff;}
 
         .envelop {
@@ -2141,6 +2185,7 @@
             line-height: 13px;
             background-color: transparent;
             margin-right: 32%;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .envelop-tittle {
@@ -2185,6 +2230,7 @@
             justify-content: center;
             justify-items: center;
             background: #fff;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
 .DACA{
@@ -2313,6 +2359,7 @@
             justify-content: center;
             justify-items: center;
             background-color: transparent;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .contentt-wrapper {
@@ -2474,6 +2521,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content9a img {
@@ -2520,6 +2568,7 @@
             padding-right: 5px;
             padding-top: 15px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .BURKINAFASO{
@@ -2535,7 +2584,7 @@
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
-            border: 0.16rem solid #d6d6d6da;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
 
         }
 .Bmap{
@@ -2550,6 +2599,7 @@
 }
 
 .Burkimap img{
+    background: #fff;
     padding: 5px;
     height: 175px;
     border-radius: 0.5rem;
@@ -2565,6 +2615,7 @@
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
+            background: #fff;
             width: 800px;
             height: 175px;
             padding: 15px;
@@ -2737,6 +2788,7 @@ cursor: pointer;
             height: 410px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .C {
@@ -3189,6 +3241,7 @@ cursor: pointer;
             height: 570px;
             padding-top: 5px;
             padding-bottom: 5px;
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .T{
