--- a/index.html
+++ b/index.html
@@ -4320,6 +4320,24 @@ function showSlides(n) {
     <div class="FASO"> 45. Zoundweogo
     </div>
 </a>
+<a href= "https://mairie-ouaga.bf/accueil" target="_blank">
+    <div class="FASO"> Ouagadougou
+    </div>
+</a>
+<a href= "https://www.britannica.com/place/Bobo-Dioulasso" target="_blank">
+    <div class="FASO"> Bobo Dioula
+    </div>
+</a>
+<a href= "https://en.wikivoyage.org/wiki/Ouahigouya" target="_blank">
+    <div class="FASO"> Ouahigouya
+    </div>
+</a>
+<a href= "https://en.wikipedia.org/wiki/Banfora" target="_blank">
+    <div class="FASO"> Banfora
+    </div>
+</a>
+
+
 
 </div>
 
