--- a/index.html
+++ b/index.html
@@ -4321,19 +4321,19 @@ function showSlides(n) {
     </div>
 </a>
 <a href= "https://mairie-ouaga.bf/accueil" target="_blank">
-    <div class="FASO"> Ouagadougou
+    <div class="FASO" style="color: blue;"> Ouagadougou
     </div>
 </a>
 <a href= "https://www.britannica.com/place/Bobo-Dioulasso" target="_blank">
-    <div class="FASO"> Bobo Dioula
+    <div class="FASO" style="color: blue;"> Bobo Dioula
     </div>
 </a>
 <a href= "https://en.wikivoyage.org/wiki/Ouahigouya" target="_blank">
-    <div class="FASO"> Ouahigouya
+    <div class="FASO" style="color: blue;"> Ouahigouya
     </div>
 </a>
 <a href= "https://en.wikipedia.org/wiki/Banfora" target="_blank">
-    <div class="FASO"> Banfora
+    <div class="FASO" style="color: blue;"> Banfora
     </div>
 </a>
 
