--- a/index.html
+++ b/index.html
@@ -2660,10 +2660,10 @@ height: auto;
             width: 800px;
             height: 175px;
             padding: 15px;
-            background: #f4f4f4;
+            background: #fcfcfcd9;
             border-radius: 0.35rem;
             box-shadow: 0 -0.5px 0.3rem 1px rgba(30, 63, 184, 0.914);
-            color:rgba(101, 101, 101, 0.925);
+            color:rgba(132, 132, 132, 0.941);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 15px;
         }
@@ -2672,7 +2672,7 @@ height: auto;
             color:rgb(26, 49, 133);
             transition: 0.14s linear;
             box-shadow: -0.2px 2px 0.35rem 2px rgb(22, 46, 133);
-            background: -webkit-linear-gradient(rgba(0, 128, 0, 0.305),#fff);
+            background: -webkit-linear-gradient(rgba(0, 128, 0, 0.455),#fff);
         }
 
         .BUFASO{
@@ -3492,7 +3492,7 @@ background: #717171;
             border: 0.1px solid rgba(121, 121, 121, 0.486);
             border-bottom: none;
             color: rgba(9, 106, 197, 0.949);
-            box-shadow: 0 2px 0.4rem 0.5px rgba(35, 132, 223, 0.931);
+            box-shadow: 0 2px 0.3rem 0.2px rgba(57, 152, 241, 0.931);
             transition: 0.45s ease;
         }
 
@@ -3501,10 +3501,10 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgba(0, 0, 139, 0.903);
-            font-size: 22px;
+            color: rgba(5, 158, 228, 0.988);
+            font-size: 17.5px;
             font-family: 'arial black';
-            width: 84%;
+            width: 85%;
         }
 
         .read{
@@ -3518,7 +3518,7 @@ background: #717171;
             background: rgba(213, 216, 217, 0.381);
             color: #000;
             margin-top: 3.5rem;
-            box-shadow: 0 3px 0.25rem 1px rgba(77, 164, 245, 0.842);
+            box-shadow: 0 2px 0.25rem 1px rgba(86, 170, 248, 0.842);
             border-radius: 0.35rem;
         }
 
@@ -3881,7 +3881,7 @@ function showSlides(n) {
             <div class="read">
 
                 <div class="disabled">
-                    DO NOT VIOLATE DISABILITY RIGHTS ANYTIME AND ANYWHERE !
+                    We ARE DIFFERENTLY ABLE. DON'T SEE ONLY MY DISABILITY - SEE ALSO MY ABILITY
                 </div>
 
                 <div class="reader">
