--- a/index.html
+++ b/index.html
@@ -2618,7 +2618,7 @@ height: auto;
             justify-content: center;
             justify-items: center;
             width: 84%;
-            height: 730px;
+            height: 700px;
             padding: 10px;
             background: #f0f0f0;
             font-family: 'Merienda';
@@ -2701,9 +2701,9 @@ box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
 border: 1.5px solid rgba(33, 33, 171, 0.796);
 border-radius: 0.5rem;
 width: 149px;
-height: 65px;
+height: 60px;
 padding: 15px;
-color: rgb(40, 40, 137);
+color: rgb(19, 19, 122);
 cursor: pointer;
         }
         .FASO:hover{
@@ -3881,7 +3881,7 @@ function showSlides(n) {
             <div class="read">
 
                 <div class="disabled">
-                    We ARE DIFFERENTLY ABLE. DON'T SEE ONLY MY DISABILITY - SEE ALSO MY ABILITY
+                    WE ARE DIFFERENTLY ABLE*DON'T SEE ONLY MY DISABILITY*SEE ALSO MY ABILITY
                 </div>
 
                 <div class="reader">
