--- a/index.html
+++ b/index.html
@@ -3920,7 +3920,7 @@ function showSlides(n) {
                         <div class="kk">
                                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="">
                                 <figure>
-                                <figcaption style="font-family: 'Merienda'; font-size: 13px; text-align: left;  color: rgba(37, 23, 102, 0.937)">
+                                <figcaption style="font-family: 'Merienda'; font-size: 11px; text-align: left;  color: rgba(37, 23, 102, 0.937)">
                                     Drumming and Courses at Tiki N'Yiki
                                 </figcaption>
                             </figure>
@@ -3931,7 +3931,7 @@ function showSlides(n) {
                             <figure>
                                 <figcaption
                                     style="font-family: 'arial'; font-size: 13px; text-align: left; color: rgba(81, 60, 177, 0.937);">
-                                    Celebrating Christmas in Burk. Faso
+                                    Celebrating Christmas in B.FASO
                                 </figcaption>    
                         </figure>
                         </div>
