--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             position: sticky;
             align-items: center;
             margin-top: -16px;
-            box-shadow: 0 3px 0.45rem 2px rgba(9, 15, 82, 0.711);
+            box-shadow: 0 3px 0.35rem 2px rgba(12, 21, 116, 0.711)
         }
 
         .navbar a {
@@ -2656,23 +2656,22 @@ height: auto;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            background: #fff;
             width: 800px;
-            height: 175px;
-            padding: 15px;
-            background: #fcfcfcd9;
+            height: 174px;
+            padding: 8px;
+            background: #fcfcfcf5;
             border-radius: 0.35rem;
             box-shadow: 0 -0.5px 0.3rem 1px rgba(30, 63, 184, 0.914);
-            color:rgba(132, 132, 132, 0.941);
+            color:rgba(126, 126, 126, 0.941);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 15px;
+            font-size: 14px;
         }
 
         .FASOTITLE:hover{
-            color:rgb(26, 49, 133);
+            color:rgb(33, 58, 146);
             transition: 0.14s linear;
             box-shadow: -0.2px 2px 0.35rem 2px rgb(22, 46, 133);
-            background: -webkit-linear-gradient(rgba(0, 128, 0, 0.455),#fff);
+            background: -webkit-linear-gradient(rgba(127, 250, 115, 0.669),#ffff);
         }
 
         .BUFASO{
@@ -2720,11 +2719,11 @@ cursor: pointer;
 grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
-background: rgb(201, 206, 210);
+background: rgb(176, 177, 179);
 font-family: 'Merienda';
 font-size: 14px;
 box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
-border: 1.5px solid rgba(33, 33, 171, 0.796);
+border: 1.5px solid #fff;
 border-radius: 0.5rem;
 width: 149px;
 height: 65px;
@@ -4263,11 +4262,10 @@ function showSlides(n) {
                 </div>
 
                 <div class="FASOTITLE">
-                <p><b>Burkina Faso, the land of integrity and landlocked country of 45 provinces, is nested within the heart of West Africa. Burkina Faso was a former colony of France from which it took its independence in August 5th, 1960. Its capital and
-                main city is Ouagadougou. 
-                Ouagadougou city area is populated by 1.086.505 people according to the website of PopulationStat.The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
+                <p><b>Burkina Faso, the land of integrity, a landlocked country, is administratively structured of 45 provinces and is a low-income Sub-Saharan African country with limited natural resources. Burkina Faso is nested within the heart of West Africa. It was a former colony of France from which it gained (took) independence in August 5th, 1960. Its capital and
+                main city is Ouagadougou populated by 1.086.505 people in the city area according to the website of PopulationStat.The global population of Burkina Faso is about 23 300 000 inhabitants with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
-                sector is growing and believed to create jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé.  
+                sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but no a plural mark with 'S' even if it is at least two inhabitants.  
                 </b>    
             </p>            
             </div>
@@ -4947,7 +4945,7 @@ function showSlides(n) {
                     <div class="mySlides fade">
                         <div class="numbertext">5/55</div>
                         <img src="https://zupimages.net/up/21/49/8t88.jpg" style="width: 100%; height:  465px">
-                        <div class="text" style="font-size: 16px; text-align: left">La Prairie River</div>
+                        <div class="text" style="font-size: 16px; text-align: left">La Prairie River during Automn</div>
                     </div>
 
                     <div class="mySlides fade">
@@ -4965,7 +4963,7 @@ function showSlides(n) {
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">8/55</div>
                         <img src="https://zupimages.net/up/22/26/g9yi.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #000; font-size: 16px; text-align: right">La Prairie River in wintwer</div>
+                        <div class="text" style="color: #000; font-size: 16px; text-align: right">La Prairie River during winter</div>
                     </div>
 
                     <div class="mySlides fade">
@@ -5031,19 +5029,19 @@ function showSlides(n) {
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">19/55</div>
                         <img src="https://zupimages.net/up/21/49/omqa.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Tourists aboard a horse diligence</div>
+                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Tourists aboard of a horse diligence</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #000">20/55</div>
                         <img src="https://zupimages.net/up/21/49/4li5.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #000; font-size: 16px; text-align: left"> A Casino Car</div>
+                        <div class="text" style="color: #000; font-size: 16px; text-align: left"> A Casino Car in Montreal</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">21/55</div>
                         <img src="https://zupimages.net/up/21/50/dsge.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #fff; font-size: 16px; text-align: left"> Sainte Catherine Street</div>
+                        <div class="text" style="color: #fff; font-size: 16px; text-align: left"> Famous Sainte Catherine Street in Montreal</div>
                     </div>
 
                     <div class="mySlides fade">
@@ -5079,13 +5077,13 @@ function showSlides(n) {
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">27/55</div>
                         <img src="https://zupimages.net/up/22/26/clki.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Cath. Reine-Marie-du-monde</div>
+                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Cathedrale Marie-Reine-du-monde</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">28/55</div>
                         <img src="https://zupimages.net/up/22/31/sl14.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Best Buy</div>
+                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Best Buy, Rue Sainte Cathérine</div>
                     </div>
 
 
@@ -5117,7 +5115,7 @@ function showSlides(n) {
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">33/55</div>
                         <img src="https://zupimages.net/up/22/42/jud6.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">A Colourful Landscape</div>
+                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">A Colourful Landscape in Pointe-aux-trembles/Montréal</div>
                     </div>
 
                     <div class="mySlides fade">
@@ -5147,13 +5145,13 @@ function showSlides(n) {
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">38/55</div>
                         <img src="https://www.zupimages.net/up/22/42/mh4v.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Pasta</div>
+                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Cooked Pasta</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext" style="color: #fff">39/55</div>
                         <img src="https://www.zupimages.net/up/22/42/3yo4.jpg" style="width:  100%; height:  465px">
-                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">Red Flower</div>
+                        <div class="text" style="color: #fff; font-size: 16px; text-align: left">A beautiful flower</div>
                     </div>
 
                     <div class="mySlides fade">
