--- a/index.html
+++ b/index.html
@@ -3289,9 +3289,9 @@ cursor: pointer;
             padding: 10px;
             font-family: 'Barlow Condensed', sans-serif;
             color: #000;
-            font-size: 18px;
+            font-size: 16px;
             text-align: justify;
-            line-height: 19.5px;
+            line-height: 18.25px;
             background: transparent;
             margin-top: -5px;
             border: 0.12rem solid #0353e7;
@@ -4893,9 +4893,9 @@ function showSlides(n) {
                             Immigration Is Heartbreaking
                         </div>
                         <div class="explanation2">
-                            As a physical disabled person who legally made it to Canada, I experienced many challenges on my way. First
-                            of all, seeking asylum is a long and difficult process. It matters with administrative longer procedures
-                            that can last at least after 5 to 6 years before having the citizenship if there is a grant. It's been so hard because
+                            As a physical disabled person who legally made it to Canada, I experienced many challenges on my way and still experiencing. In addition to racism and discrimination
+                            as a black and disabled person, seeking asylum in Montreal [Canada] is a long and difficult way to reach. It matters with hard work, rigor, ponctuality, credibility and lots energy and optimism to pursue administrative and longer procedures
+                            that can last at least after many years (5-6 years) before having the citizenship if there is obviously a grant. It's been so hard because
                             as a disabled person in a new country I have to embrace a new culture in addition to mine and then get adapted.
                             I had neither parents, nor relatives in Quebec-Canada at this time and I have to find out a way to stay. After spending 3 days
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
@@ -5263,11 +5263,9 @@ function showSlides(n) {
     <div class="footer">
         Copyright © 2023 Tiki N'Yiki
         <br>
-        Fights For Disability Rights
+        <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are diffrently able</b>
         <br>
-        DISABILITY IS NOT DESTINY * WE ARE DIFFERENTLY ABLE
-        <br>
-        Webmaster: Gabriel K.C, Disability Rights Activist
+        <em style="color: lightcyan; font-size: 14.5px;"> Webmaster: Gabriel C. Disability Rights Activist looking for a job on coding please !</em>
         <br>
     </div>
 
